--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
     "prefix": "-",
-    "token": "NzgxMzg2OTk2MjcwMjM1NjU4.X785WQ.LwZochUx_jKicypsNk3gXkSsiY4"
+    "token": "insert token here"
 }
